--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,50 @@
 @import "assets/styles/variable.scss";
 
-.next {
-  transition: color ease 0.3s;
-  cursor: pointer;
-  font-size: 5rem;
-  display: flex;
-  width: fit-content;
-  margin: auto;
-  &:hover {
-    color: $green-100;
-  }
-}
 .click {
   cursor: pointer;
 }
 header {
-  min-height: 107vh;
-  background: url("./assets/Images/header-bg.png");
+  min-height: 80vh;
+  background: url("./assets/Images/background.svg");
   background-position: center;
   background-size: cover;
-  .inspiration-img {
-    width: 18rem;
-    height: 26rem;
-    position: absolute;
-    bottom: 15%;
-    right: 5%;
+  margin-top: 12rem;
+
+  .flex-wrapper {
+    padding-top: 8rem;
+    display: flex;
+    justify-content: space-between;
+    .people {
+      width: 43%;
+      color: #08002e;
+      h1 {
+        font-size: 5rem;
+        font-weight: 800;
+        margin-bottom: 2rem;
+      }
+      p {
+        font-size: 1.4rem;
+        font-weight: 600;
+        line-height: 1.6;
+        margin-bottom: 2rem;
+      }
+    }
+    .sara-dub {
+      width: 43%;
+      img {
+        width: 30rem;
+      }
+    }
+    @media (max-width: 769px) {
+      flex-direction: column;
+      gap: 2rem;
+      .people,
+      .sara-dub {
+        width: 100%;
+      }
+    }
   }
+
   .next {
     font-size: 6rem;
     animation: bouncing 2s ease-in infinite;
@@ -60,7 +79,7 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: transparent;
+  background-color: #fefdff;
   padding: 1rem 4rem;
   align-items: center;
   position: sticky;
@@ -68,33 +87,13 @@ nav {
   top: 0;
   z-index: 5;
   margin-top: -13rem;
-  .logo {
-    width: 19rem;
-    object-fit: contain;
+  h1 {
+    color: #08002e;
+    font-weight: 700;
   }
   .toggle-menu,
   .close {
     display: none;
-  }
-  .socials-icon {
-    width: 4rem;
-    height: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
-    &.discord {
-      background: $blue-100;
-      font-size: 2rem;
-    }
-    &.twitter {
-      background: $blue-50;
-      font-size: 1.8rem;
-    }
-    @media (max-width: 450px) {
-      display: none;
-    }
   }
   .nav-link {
     flex: 1;
@@ -105,19 +104,16 @@ nav {
       padding: 0.6rem 1.2rem;
       position: relative;
       a {
-        color: $white-000;
+        color: #08002e;
         text-decoration: none;
         font-size: 1.6rem;
         transition: all ease 0.3s;
-        &:hover {
-          color: $white-000;
-        }
       }
       &::after {
         content: "";
         height: 2px;
         width: 0%;
-        background: $white-000;
+        background: #ff6745;
         transition: all ease 0.3s;
         display: block;
         transition: 0.5s;
@@ -134,7 +130,7 @@ nav {
     }
   }
   &.sticky {
-    background-color: $white-000;
+    background-color: #fff;
     box-shadow: 0 0.4rem 0.5rem rgba(179, 179, 179, 0.5);
     padding-block: 1.5rem;
     .nav-link {
@@ -159,16 +155,17 @@ nav {
     .close {
       display: block;
       font-size: 3rem;
-      color: $white-000;
+      color: #08002e;
       cursor: pointer;
       margin: 10px;
     }
     .close {
+      color: white;
       font-size: 6rem;
     }
     .nav-link {
       position: fixed;
-      background: #05130a;
+      background: rgb(5, 19, 10);
       height: 100vh;
       width: 100%;
       top: 0;
@@ -187,6 +184,7 @@ nav {
           padding: 1.8rem 1.2rem;
           a {
             font-size: 3rem;
+            color: white;
           }
         }
       }
@@ -201,92 +199,104 @@ nav {
 
 //About section
 .about {
-  background: $bg-about;
-  padding-block: 3rem;
-  p {
-    font-size: 1.8rem;
-  }
-  .next {
-    margin-bottom: 5rem;
-  }
-  img {
-    width: 100%;
-  }
-  h2 {
-    color: $green-100;
-    font-size: 3.4rem;
-    font-weight: 700;
-  }
-
-  .green-wrap,
-  .blue-wrap,
-  .purple-wrap {
+  .iconic-wrapper {
+    background: url("./assets/Images/section-2-background.svg");
+    height: 30vh;
+    overflow: hidden;
+    border-radius: 2rem;
+    background-position: center;
+    background-size: cover;
+    margin-top: 12rem;
     display: flex;
-    gap: 2rem;
-    margin-block: 1.5rem;
     align-items: center;
-    padding: 1rem 1.5rem;
-    border-radius: 0.5rem;
-    max-width: 33rem;
-    p {
-      font-size: 1.4rem;
+    justify-content: center;
+    gap: 2rem;
+    padding-inline: 5rem 2rem;
+    position: relative;
+    img.annie-img {
+      width: 13rem;
+      margin-top: -6.7rem;
     }
-    .icon {
-      font-size: 2rem;
-    }
-  }
-  .green-wrap {
-    background: $green-100;
-    max-width: 26rem;
-    margin-top: 4rem;
-  }
-  .blue-wrap {
-    background: $blue-100;
-  }
-  .purple-wrap {
-    background: $purple-100;
-    margin-bottom: 4rem;
-  }
-  .slides {
-    opacity: 0;
-
-    &.slide_in {
-      opacity: 1;
-      &.left {
-        animation: fade-left 1s ease-in;
+    @media (max-width: 991px) {
+      min-height: 100vh;
+      flex-direction: column-reverse;
+      img.annie-img {
+        width: 20rem;
+        margin-top: 1rem;
       }
-      &.right {
-        animation: fade-right 1s ease-in;
-      }
-    }
-  }
-  @keyframes fade-left {
-    0% {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes fade-right {
-    0% {
-      transform: translateX(100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
     }
   }
 }
 
-//Included section
-.info {
-  background: $white-100;
-  padding-block: 6rem;
+//attraction section
+.attraction {
+  margin-block: 6rem;
+  .grid-wrapper {
+    display: grid;
+    grid-auto-flow: column;
+    grid-column-gap: 1.6rem;
+    column-gap: 1.6rem;
+    overflow-x: auto;
+    padding: 2.4rem;
+    .cardd {
+      min-width: 30rem;
+      .attraction-card {
+        color: #212227;
+        padding: 1.6rem;
+        border-radius: 0.8rem;
+        overflow: hidden;
+        background: #fff;
+        font-size: 1.2rem;
+        user-select: none;
+        border: 0.1rem solid rgba(33, 34, 39, 0.03);
+        box-shadow: 0 0.2rem 0.4rem rgba(33, 34, 39, 0.05);
+        .card-header {
+          background: rgba(33, 34, 39, 0.03);
+          border: none;
+          font-size: 1.4rem;
+          display: inline-flex;
+          align-items: center;
+          flex-direction: row;
+          gap: 1rem;
+          border-radius: 0.6rem;
+          padding: 0.6rem 1rem;
+          line-height: 1.4;
+          .images {
+            display: flex;
+            flex-direction: row;
+            img {
+              border: 0.1px solid #fff;
+              background: #f5f5f5;
+              border-radius: 50%;
+              height: 12px;
+              width: 12px;
+              background-size: cover;
+              filter: blur(0.1px);
+            }
+          }
+        }
+        .photo {
+          margin-top: 1rem;
+          img {
+            border-radius: 1rem;
+            width: 100%;
+          }
+        }
+        .card-foot {
+          margin-top: 2.5rem;
+          font-size: 1.6rem;
+          .name {
+            font-weight: 700;
+          }
+          .likes {
+            color: #666;
+            font-size: 1.4rem;
+          }
+        }
+      }
+    }
+  }
+
   .next {
     color: $purple-100;
   }
@@ -310,7 +320,7 @@ nav {
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
     .i-card {
-      background: $white-000;
+      background: #fff;
       min-height: 18rem;
       padding: 4rem 2rem 2rem 4rem;
       border-radius: 0.8rem;
@@ -370,254 +380,40 @@ nav {
     }
   }
 }
-
-.roadmap-wrapper {
-  .roadmap-inner {
-    margin-top: 9rem;
-    background-color: $black-000;
-    background-image: url("./assets/Images/gradient.svg");
-    padding: 4rem;
-    border-radius: 1.8rem;
-    min-height: 100vh;
-    background-size: cover;
-    background-position: center;
-    .slide-container {
-      width: 90%;
-      margin: auto;
-      margin-top: 3rem;
-      .slider {
-        -webkit-appearance: none;
-        width: 100%;
-        height: 1rem;
-        background: rgba($color: $green-200, $alpha: 0.3);
-        outline: none;
-        opacity: 0.7;
-        -webkit-transition: 0.2s;
-        transition: opacity 0.2s;
-        border-radius: 5rem;
-        &:hover {
-          opacity: 1;
-        }
-        &::-webkit-slider-thumb {
-          -webkit-appearance: none;
-          appearance: none;
-          width: 25px;
-          height: 25px;
-          background: $green-200;
-          border-radius: 0.5rem;
-          cursor: pointer;
-        }
-        &::-moz-range-thumb {
-          width: 25px;
-          height: 25px;
-          background: $green-200;
-          border-radius: 0.5rem;
-          cursor: pointer;
-        }
-      }
-    }
-
-    h3 {
-      font-size: 3rem;
-      font-weight: 700;
-      &.green {
-        color: $green-200;
-      }
-    }
-    .note {
-      font-size: 1.2rem;
-      margin: 0;
-    }
-    .roadmaps {
-      font-family: "Syne", sans-serif;
-      margin-block: 5rem;
-      display: flex;
-      overflow: scroll;
-      column-gap: 8.4rem;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-      .roadmap-card {
-        min-width: 38rem;
-        max-width: 100%;
-        min-height: 51rem;
-        border-radius: 1.5rem;
-        padding: 3.5rem 2.5rem;
-        font-weight: 700;
-        background: rgba(143, 208, 119, 0.1);
-
-        .title {
-          border-radius: 0.6rem;
-          font-size: 2rem;
-          color: $black-000;
-          padding: 0rem 1.6rem;
-          width: fit-content;
-          margin-bottom: 4rem;
-          margin-left: 2rem;
-          background: $green-200;
-          &::before {
-            content: "";
-            position: absolute;
-            width: 0.2rem;
-            height: 0.8rem;
-            left: 1.6rem;
-            top: 2.9rem;
-            background-color: $green-200;
-          }
-        }
-        ul {
-          position: relative;
-          &::after {
-            content: "";
-            position: absolute;
-            background-color: $green-200;
-            width: 0.9rem;
-            height: 0.9rem;
-            left: 3.3rem;
-            bottom: -2rem;
-            border-radius: 50%;
-          }
-        }
-        li,
-        .title {
-          position: relative;
-          &:after {
-            content: "";
-            position: absolute;
-            width: 0.2rem;
-            height: 100%;
-            left: 1.6rem;
-            top: 3.7rem;
-            background-color: $green-200;
-          }
-        }
-        li {
-          list-style: none;
-          .content {
-            font-size: 1.8rem;
-            color: $white-000;
-            margin-left: 4rem;
-            margin-block: 2rem;
-            min-height: 11rem;
-          }
-          .tag {
-            color: $black-000;
-            padding: 0.6rem 1.5rem;
-            border-radius: 1.5rem;
-            background-color: $white-000;
-            width: fit-content;
-          }
-
-          &:first-of-type {
-            .content {
-              color: $yellow-200;
-            }
-            .tag {
-              background-color: $yellow-200;
-            }
-          }
-          &:last-of-type {
-            &::after {
-              height: 90%;
-            }
-          }
-        }
-        &:nth-child(even) {
-          background: rgba(151, 71, 255, 0.1);
-          ul,
-          li,
-          .title {
-            &:after,
-            &::before {
-              background: $purple-100;
-            }
-          }
-          .title {
-            background: $purple-100;
-            color: $white-000;
-          }
-          li {
-            &:first-of-type {
-              .content {
-                color: $green-200;
-              }
-              .tag {
-                background-color: $green-200;
-              }
-            }
-          }
-        }
-        @media (max-width: 500px) {
-          min-width: 33rem;
-          .title {
-            font-size: 1.8rem;
-          }
-          li {
-            .content {
-              font-size: 1.6rem;
-            }
-          }
-        }
-      }
-    }
+.contact-page-wrapper {
+  margin-top: 5rem;
+  .icon {
+    font-size: 4rem;
+    color: #000000;
   }
-  @media (max-width: 700px) {
-    padding: 0;
-    .roadmap-inner {
-      padding-inline: 3rem;
+  h2 {
+    font-size: 1.7rem;
+    margin-block: 1.9rem;
+    color: #212227;
+  }
+  p {
+    color: #727171;
+    font-size: 1.4rem;
+  }
+  @media (min-width: 768px) {
+    .email-brder {
+      border-inline: 0.1rem dashed #727171;
     }
   }
 }
-
-.token-allocation {
+.attraction-page {
   margin-top: 10rem;
-  width: 32rem;
-  max-width: 100%;
-  height: 49rem;
-  background: $white-000;
-  border: 0.1rem solid $purple-100;
-  border-radius: 1.5rem;
-  padding: 3rem;
-  @media (max-width: 330px) {
-    width: 25rem;
-  }
-  h3 {
-    font-size: 2.2rem;
-    font-weight: 700;
-    color: $green-100;
-    margin-bottom: 4rem;
-  }
-  .allocation-percent {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: $purple-50;
-    padding: 1rem;
-    border-radius: 0.3rem;
-    margin-bottom: 1.3rem;
-    p {
-      color: $grey-100;
-      margin: 0;
-    }
-    &.green {
-      background: rgba($color: $green-200, $alpha: 0.3);
-    }
-    &.purple {
-      background: rgba($color: $purple-100, $alpha: 0.1);
-    }
-    &.grey- {
-      background: $grey-10;
-    }
-    &.grey {
-      background: rgba($color: $grey-20, $alpha: 0.5);
-    }
-  }
-}
-
-.technologies-wrapper {
-  margin-top: 10rem;
-  background: $white-000;
+  background: #fff;
   padding-block: 8rem;
+  h1 {
+    width: 86%;
+    margin: auto;
+    margin-block: 8rem;
+    color: #08002e;
+    font-size: 3.5rem;
+    text-align: center;
+    font-weight: 700;
+  }
   p {
     font-size: 2rem;
     color: $grey-100;
@@ -633,78 +429,69 @@ nav {
       width: 27rem;
     }
   }
-}
 
-.whitepaper-wrapper {
-  min-height: 60vh;
-  background: url("./assets/Images/whitepaper-bg.svg");
-  background-position: right;
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-block: 8rem;
-  p {
-    margin-bottom: 2.5rem;
-    &.title {
-      color: $green-200;
-      font-size: 2.2rem;
-      font-weight: 800;
+  .grid-container {
+    .item1 {
+      grid-area: one;
     }
-    &.content {
-      color: $white-000;
-      font-size: 1.9rem;
-      font-weight: 300;
+    .item2 {
+      grid-area: two;
+    }
+    .item3 {
+      grid-area: three;
+    }
+    .item4 {
+      grid-area: four;
+    }
+    .item5 {
+      grid-area: five;
+    }
+    display: grid;
+    grid-template-areas:
+      "one two three"
+      "one four five";
+    grid-gap: 0.4rem;
+    padding: 0.4rem;
+    flex-basis: auto;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
 
 footer {
-  margin-block: 7rem 3rem;
-  p,
-  a {
-    font-size: 1.6rem;
-    color: $grey-100;
-
-    &.title {
-      color: $black-000;
+  padding: 2.4rem;
+  font-size: 1.6rem;
+  line-height: 1;
+  background: rgba(33, 34, 39, 0.06);
+  @media (max-width: 600px) {
+    padding: 1.6rem 0;
+  }
+  .l-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 120rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 3rem;
+    .copyright {
+      color: #23231e;
       font-weight: 600;
+      flex: 1 1 100%;
     }
-  }
-  a:hover {
-    color: $purple-100;
-  }
-
-  .socials-icon {
-    margin-top: 2rem;
-    font-size: 3.5rem;
-    color: $brown;
-    margin-right: 2.5rem;
-  }
-}
-
-.scroll-up {
-  width: 6rem;
-  height: 6rem;
-  background: $purple-100;
-  font-size: 4rem;
-  position: sticky;
-  bottom: 0;
-  left: 92%;
-  bottom: 20%;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  @media (max-width: 800px) {
-    width: 4.3rem;
-    height: 4.3rem;
-    font-size: 2.8rem;
-  }
-}
-
-.socials-icon {
-  transition: transform ease 0.3s;
-  &:hover {
-    transform: scale(1.1);
+    a {
+      color: #23231e;
+    }
+    @media (max-width: 600px) {
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      .u-desktop-only {
+        display: none;
+      }
+    }
   }
 }
