--- a/src/assets/styles/button.scss
+++ b/src/assets/styles/button.scss
@@ -2,7 +2,7 @@
 
 .btn {
   border-radius: 1rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   text-align: center;
   justify-content: center;
   padding: 1rem;
@@ -10,7 +10,7 @@
 .btn-lg {
   min-height: 3rem;
   min-width: 8rem;
-  padding: 1.2rem;
+  padding: 0.8rem 1.2rem;
   font-size: 2rem;
   font-weight: 500;
 }
