--- a/src/App.scss
+++ b/src/App.scss
@@ -197,7 +197,7 @@ nav {
 }
 
 //About section
-.about {
+.discover {
   .iconic-wrapper {
     background: url("./assets/Images/section-2-background.svg");
     height: 30vh;
@@ -221,7 +221,7 @@ nav {
       }
       img.priscilla-img {
         position: absolute;
-        top: -33%;
+        top: -38%;
         right: 5%;
         width: 23.5rem;
       }
