:zap: UI corrections

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,12 @@ header {
   margin-top: 12rem;
 
   .flex-wrapper {
-    padding-top: 8rem;
     display: flex;
     justify-content: space-between;
+    padding-top: 28vh;
+    @media (max-width: 800px) {
+      padding-top: 8rem;
+    }
     .people {
       width: 43%;
       color: #08002e;
@@ -248,7 +251,7 @@ nav {
 //attraction section
 .attraction {
   margin-block: 6rem;
-  .grid-wrapper {
+  &.grid-wrapper {
     display: grid;
     grid-auto-flow: column;
     grid-column-gap: 1.6rem;
@@ -419,9 +422,9 @@ nav {
   }
 }
 .attraction-page {
-  margin-top: 10rem;
   background: #fff;
-  padding-block: 8rem;
+  margin-block: 30vh 10vh;
+
   h1 {
     width: 86%;
     margin: auto;
@@ -430,6 +433,12 @@ nav {
     font-size: 3.5rem;
     text-align: center;
     font-weight: 700;
+  }
+  @media (max-width: 800px) {
+    margin-block: 20vh 5vh;
+    h1 {
+      font-size: 2.5rem;
+    }
   }
   p {
     font-size: 2rem;
