--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,9 @@ nav {
     color: #08002e;
     font-weight: 700;
   }
+  .logo-img {
+    width: 30rem;
+  }
   .toggle-menu,
   .close {
     display: none;
